  [Michele Simionato]
  * Implemented sampling for mutex sources with grp_probability
  * Introduced `extreme_gmv` parameter in the job.ini
  * Internal: added command `oq plot event_based_mfd?`
  * Moved the minimum magnitude filtering after the rupture sampling
  * Changed the internals of rupture sampling again (trt_smr)
  * Fixed a bug in scenario calculations causing a mysterious IndexError in the
    line rctx.clon = c.lons[rctx.sids]
  * Changed the disaggregation exporter to add a column with the IML
    associated to the PoE for the mean disaggregation outputs
  * Internal: added a parameter `override_vs30` in the job.ini

  [Marco Pagani, Michele Simionato]
  * Fixed a bug in the source writer when writing NonParametricSources

  [Michele Simionato]
  * Changed the conditional spectrum storage and fixed the exporter to export
    all PoEs

  [Marco Pagani]
  * Fixed conditional spectrum with investigation time different from 1 year

  [Michele Simionato]
  * Fixed documentation of the Extractor for hazard curves and maps
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included
  * Honored `minimum_magnitude` for MultiFaultSources
  * Overhauled the experimental postprocessing framework and fixed many
    bugs in the `compute_mrd` postprocessor

  [Anirudh Rao]
  * Added a verification test suite for the Conditioned GMFs calculator

  [Michele Simionato]
  * Added output `rates_by_src`
  * Fixed method '/v1/ini_defaults' returning NaNs for the site parameters
  * Added output `mean_disagg_bysrc` for single site calculations with use_rates
  * Added command `oq reduce_smlt`
  * Fixed reinsurance calculations when there is a single loss type
  * Changed the source seed generation to not depend on the source ID suffix
  * Tracebacks were printed 3 times in the console: this is finally fixed
  * Forbidden duplicate sources in atomic groups