@@ -1,0 +1,5 @@
+id,lon,lat,taxonomy,number,structural,nonstructural,contents,night,NAME_1,NAME_2,NAME_3,NAME_4
+a1,83.31382,29.46117,Wood,1,11340,19845,5670,5,Mid-Western,Karnali,Dolpa,Tinje
+a2,83.31382,29.23617,Wood,1,11340,19845,5670,5,Mid-Western,Karnali,Dolpa,Tinje
+a9135,85.00417,27.3875,Unreinforced-Brick-Masonry,489,11340,19845,5670,2386,Central,Narayani,Makwanpur,Churiyamai
+a9136,86.65417,26.7875,Unreinforced-Brick-Masonry,474,11340,19845,5670,2313,East,Sagarmatha,Udayapur,TriyugaN.P.
