@@ -1,0 +1,42 @@
+#,,,,,,"generated_by='OpenQuake engine 3.17.0-git6bbb32613e', start_date='2023-04-27T05:49:12', checksum=2783839574"
+event_id,gmv_PGA,gmv_SA(0.3),gmv_SA(0.6),gmv_SA(1.0),custom_site_id
+0,5.90305E-02,8.76940E-02,1.32631E-01,8.11155E-02,tv5nrf73
+0,2.93713E-02,5.13503E-02,5.32610E-02,3.82789E-02,tv5pxg5r
+0,2.76455E-01,5.07049E-01,7.55347E-01,2.24453E-01,tuu7y3dp
+0,3.18668E-02,3.86309E-02,6.88820E-02,8.92017E-02,tuv87ue8
+1,7.79832E-02,1.86544E-01,9.35725E-02,4.17575E-02,tv5nrf73
+1,1.29505E-01,2.75797E-02,1.21769E-01,6.62579E-02,tv5pxg5r
+1,3.38332E-01,4.64871E-01,4.93519E-01,1.05771E-01,tuu7y3dp
+1,1.07271E-01,6.14702E-02,4.70465E-02,4.97446E-02,tuv87ue8
+2,7.77142E-02,1.20936E-01,1.18118E-01,1.36557E-02,tv5nrf73
+2,4.58138E-02,1.15882E-01,5.94345E-02,2.88923E-02,tv5pxg5r
+2,5.34005E-01,4.27463E-01,1.84715E-01,2.12035E-01,tuu7y3dp
+2,2.20663E-02,9.68739E-02,3.86521E-02,1.18521E-02,tuv87ue8
+3,4.61680E-02,1.36993E-01,3.71954E-02,5.30082E-02,tv5nrf73
+3,4.48487E-02,1.83143E-01,4.61710E-02,4.28315E-02,tv5pxg5r
+3,3.06348E-01,1.08550E+00,5.90215E-01,2.08166E-01,tuu7y3dp
+3,1.77607E-02,7.40813E-02,4.79161E-02,4.73945E-02,tuv87ue8
+4,3.35009E-02,1.37792E-01,3.15526E-02,1.18119E-02,tv5nrf73
+4,4.58232E-02,9.22995E-02,6.00728E-02,3.07075E-02,tv5pxg5r
+4,4.07989E-01,4.26601E-01,4.82026E-01,9.26852E-02,tuu7y3dp
+4,3.28664E-02,2.28247E-02,3.83419E-02,1.14184E-02,tuv87ue8
+5,1.28509E-01,1.05550E-01,4.02416E-02,3.11813E-02,tv5nrf73
+5,3.08859E-02,8.42228E-02,8.55826E-02,9.48028E-03,tv5pxg5r
+5,1.74133E-01,3.09897E-01,3.92654E-01,7.08575E-02,tuu7y3dp
+5,2.02684E-02,3.06772E-02,1.00374E-01,2.96498E-02,tuv87ue8
+6,1.02858E-01,9.21513E-02,8.96269E-02,3.67937E-02,tv5nrf73
+6,6.43341E-02,8.43921E-02,4.71720E-02,1.07446E-01,tv5pxg5r
+6,3.44905E-01,4.90808E-01,2.14934E-01,1.16824E-01,tuu7y3dp
+6,2.54081E-02,4.92803E-02,6.57605E-02,2.51914E-02,tuv87ue8
+7,1.04490E-01,1.70697E-01,4.57483E-02,3.55665E-02,tv5nrf73
+7,2.99352E-02,2.07602E-01,2.03662E-02,5.53077E-02,tv5pxg5r
+7,1.63596E-01,7.41290E-01,1.22627E-01,2.06863E-01,tuu7y3dp
+7,4.01169E-02,1.72750E-01,4.53952E-02,5.87575E-02,tuv87ue8
+8,3.09065E-02,2.07001E-01,5.23540E-02,1.61167E-02,tv5nrf73
+8,6.35439E-02,7.73221E-02,4.11043E-02,4.39627E-02,tv5pxg5r
+8,1.56224E-01,2.64689E-01,1.55950E-01,9.35495E-02,tuu7y3dp
+8,2.06828E-02,1.06628E-01,5.60058E-02,3.30284E-02,tuv87ue8
+9,8.52687E-02,7.84160E-02,5.94348E-02,4.09886E-02,tv5nrf73
+9,8.48324E-02,6.13984E-02,1.32672E-01,1.51879E-02,tv5pxg5r
+9,5.34191E-01,5.36291E-01,4.16537E-01,3.84255E-02,tuu7y3dp
+9,6.18875E-02,1.25526E-01,4.87964E-02,4.00901E-02,tuv87ue8
