@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed the GMFs CSV importer so that it can import exported GMFs even in
+    the presence of a `custom_site_id`
   * Implemented sampling for mutex sources with grp_probability
   * Introduced `extreme_gmv` parameter in the job.ini
   * Internal: added command `oq plot event_based_mfd?`
